fix: evoluator test z-index footer

--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -8,6 +8,7 @@
   position: fixed;
   right: 0;
   width: 100%;
+  z-index: 11;
 }
 
 .footerContainer > a {
